--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+	<repositories>
+		<repository>
+			<id>spring-jade4j-releases</id>
+			<url>https://raw.github.com/neuland/spring-jade4j/master/releases</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -27,7 +34,7 @@
 			<version>3.2.4.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-servlet-api</artifactId>
@@ -37,6 +44,11 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>3.2.4.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>de.neuland</groupId>
+			<artifactId>spring-jade4j</artifactId>
+			<version>0.3.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -54,10 +66,10 @@
 			<version>2.2.9</version>
 		</dependency>
 		<dependency>
-            <groupId>com.googlecode.flyway</groupId>
-            <artifactId>flyway-core</artifactId>
-            <version>2.2.1</version>
-        </dependency>
+			<groupId>com.googlecode.flyway</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>2.2.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
