--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
 			<artifactId>flyway-core</artifactId>
 			<version>2.2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.pegdown</groupId>
+			<artifactId>pegdown</artifactId>
+			<version>1.4.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
