--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
 			<artifactId>pegdown</artifactId>
 			<version>1.4.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
