--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>net._01001111</groupId>
+			<artifactId>jlorem</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-servlet-api</artifactId>
 			<version>7.0.0</version>
