--- a/pom.xml
+++ b/pom.xml
@@ -79,11 +79,6 @@
 			<version>3.2.0.RC1</version>
 		</dependency>
 		<dependency>
-			<groupId>de.neuland</groupId>
-			<artifactId>spring-jade4j</artifactId>
-			<version>0.3.3</version>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>3.2.4.RELEASE</version>
@@ -132,6 +127,11 @@
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.ctlok</groupId>
+			<artifactId>spring-webmvc-rythm</artifactId>
+			<version>1.3.6</version>
 		</dependency>
 	</dependencies>
 	<build>
