--- a/pom.xml
+++ b/pom.xml
@@ -14,15 +14,15 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
-	<repositories>		
+	<repositories>
 		<repository>
 			<id>spring-libs-milestone</id>
 			<name>Spring Milestone Repository</name>
 			<url>http://repo.springsource.org/milestone</url>
 		</repository>
 		<repository>
-			<id>fakerj-mvn-repo</id>
-			<url>https://raw.github.com/loki2302/fakerj/mvn-repo/</url>
+			<id>charlatan-mvn-repo</id>
+			<url>https://raw.github.com/loki2302/charlatan/mvn-repo/</url>
 			<snapshots>
 				<enabled>true</enabled>
 				<updatePolicy>always</updatePolicy>
@@ -42,17 +42,6 @@
 			<artifactId>spring-test</artifactId>
 			<version>3.2.4.RELEASE</version>
 			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>me.loki2302</groupId>
-			<artifactId>fakerj</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>net._01001111</groupId>
-			<artifactId>jlorem</artifactId>
-			<version>1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
@@ -100,11 +89,6 @@
 			<version>1.4.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.1</version>
-		</dependency>
-		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>4.3.0.Final</version>
@@ -129,6 +113,11 @@
 			<artifactId>spring-webmvc-rythm</artifactId>
 			<version>1.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>me.loki2302</groupId>
+			<artifactId>charlatan</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -145,7 +134,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.1</version>
+				<version>3.1</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
