--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,10 @@ buildscript {
     }
 
     dependencies {
-        classpath 'org.akhikhl.gretty:gretty:+'
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.0.RELEASE")
     }
 }
+apply plugin: 'spring-boot'
 
 group 'me.loki2302'
 version '1.0-SNAPSHOT'
@@ -16,55 +17,25 @@ task wrapper(type: Wrapper) {
   distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
 }
 
-apply plugin: 'java'
-apply plugin: 'war'
-apply plugin: 'org.akhikhl.gretty'
-
-sourceCompatibility = 1.6
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    maven { url 'http://repo.springsource.org/milestone' }
     maven { url 'https://raw.github.com/loki2302/charlatan/mvn-repo/' }
 }
 
 dependencies {
     testCompile 'junit:junit:4.11'
-    testCompile 'org.springframework:spring-test:3.2.4.RELEASE'
-    compile 'org.apache.tomcat:tomcat-servlet-api:7.0.0'
-    compile 'org.springframework:spring-webmvc:3.2.4.RELEASE'
-    compile 'org.springframework.security:spring-security-web:3.2.0.RC1'
-    compile 'org.springframework.security:spring-security-config:3.2.0.RC1'
-    compile 'org.springframework:spring-context:3.2.4.RELEASE'
-    compile 'org.springframework:spring-jdbc:3.2.4.RELEASE'
-    compile 'org.hsqldb:hsqldb:2.3.1'
-    compile 'com.googlecode.flyway:flyway-core:2.2.1'
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.4.0.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.4.0.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '1.4.0.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '1.4.0.RELEASE'
+    compile 'org.hsqldb:hsqldb:2.3.4'
     compile 'org.pegdown:pegdown:1.6.0'
-    compile 'org.hibernate:hibernate-validator:4.3.0.Final'
-    compile 'org.slf4j:slf4j-api:1.6.4'
-    compile 'org.slf4j:slf4j-simple:1.6.4'
-    compile 'joda-time:joda-time:2.3'
-    compile('com.ctlok:spring-webmvc-rythm:1.4.0') {
-        exclude group: 'org.eclipse.jdt.core.compiler', module: 'ecj'
-    }
-    compile 'org.eclipse.jdt.core.compiler:ecj:4.3.1'
+    compile group: 'org.hibernate', name: 'hibernate-validator', version: '5.2.4.Final'
+    compile group: 'joda-time', name: 'joda-time', version: '2.9.4'
+    compile group: 'org.rythmengine', name: 'rythm-engine', version: '1.1.5'
     compile 'me.loki2302:charlatan:0.0.1-SNAPSHOT'
-    compile 'org.eclipse.jetty:jetty-runner:9.2.15.v20160210'
 }
-
-gretty {
-    servletContainer = 'jetty9'
-    contextPath = '/'
-    scanInterval = 0
-}
-
-task copyJettyRunner(type: Copy) {
-    into buildDir
-    from(configurations.compile.filter { it.name.startsWith('jetty-runner') }) {
-        rename 'jetty-runner.*', 'jetty-runner.jar'
-    }
-}
-
-build.dependsOn copyJettyRunner
 
 task stage(dependsOn: 'build') {}
